# Civo-version2

./: .env.example  .gitignore  DEMO.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/agent/: research.py
backend/alembic/: env.py
backend/app/: db.py  main.py  models.py  types.py
backend/config/: data_sources.yaml
backend/data/: nationalgrid_esmp.csv
backend/ingest/: _common.py  address_points.py  biomap.py  coastal_flood_risk.py  dcr_priority_forests.py  edep_scraper.py  eia860_ingest.py  ej_populations.py  esmp_national_grid_unitil.py  esmp_projects.py  fema_flood.py  ferc_queue.py  hosting_capacity.py  isone_queue.py  l3_parcels.py  land_use.py  massenviroscreen.py  nationalgrid_projects.py  nhesp.py  nrel_irradiance.py  open_space.py  prime_farmland.py  wetlands.py
backend/models/: ranker_bess.pkl  ranker_solar.pkl  scaler_bess.pkl  scaler_solar.pkl
backend/scripts/: aerial_features.py  batch_score.py  build_interconnection_training.py  check_citation_links.py  dump_for_railway.sh  extract_ml_features.py  gen_examples.py  ingest_statewide.py  parse_doer_bylaws.py  post_ingest_pipeline.sh  precompute_flags.py  refine_esmp_locations.py  rewrite_stale_report_urls.py  seed_bylaws.py  seed_doer_adoption.py  sentiment_analysis.py  suggest_url_repairs.py  train_interconnection_timeline.py  train_ranker.py  validate_doer_parse.py
backend/tests/: test_api.py  test_benchmark.py  test_doer_comparison.py  test_exemption_checker.py  test_ingestion.py  test_overlays.py  test_portfolio.py  test_scoring.py
db/: Dockerfile
(+152 files in other folders)
